--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,4 @@
-.App {
+.gridWrap {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	width: 100vw;
-	height: 100vh;
-}
-
-.appContainer {
-	padding: 20px;
 }
