--- a/src/pages/TodoRecoilA/index.module.css
+++ b/src/pages/TodoRecoilA/index.module.css
@@ -1,6 +1,10 @@
 .wrap {
 	display: grid;
 	grid-template-rows: 50px 50px 5fr;
+	height: 100vh;
+	overflow: auto;
+	padding: 20px;
+	background-color: #fff;
 }
 
 .statsWrap {
