--- a/src/pages/DemoCanvas/mods/Mateiral/index.module.css
+++ b/src/pages/DemoCanvas/mods/Mateiral/index.module.css
@@ -2,3 +2,12 @@
 	position: absolute;
 	transform: translate(-50%, -50%);
 }
+
+.materialDrag {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	height: 10px;
+	width: 10px;
+	background-color: red;
+}
