feat: snapshot transform

--- a/src/pages/DemoSnapshot/index.module.css
+++ b/src/pages/DemoSnapshot/index.module.css
@@ -18,8 +18,15 @@
 }
 
 .setter {
-	display: flex;
 	width: 400px;
 	height: 100vh;
+	overflow: auto;
 	background-color: #fff;
+}
+
+.setterItem {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 }
